<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.jsibbold.zoomage.ZoomageView
        android:id="@+id/show_image_zoomview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/show_image_button_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitCenter"
        app:zoomage_animateOnReset="true"
        app:zoomage_autoCenter="true"
        app:zoomage_autoResetMode="UNDER"
        app:zoomage_restrictBounds="false"
        app:zoomage_translatable="true"
        app:zoomage_zoomable="true" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:id="@+id/show_image_button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/show_image_zoomview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button_image_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="manageDetails"
            android:contentDescription="@string/image_details"
            android:src="@drawable/ic_baseline_info_24" />

        <ImageButton
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="manageShare"
            android:contentDescription="@string/share"
            android:src="@drawable/ic_baseline_share_24" />

        <ImageButton
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="manageDelete"
            android:contentDescription="@string/delete_image"
            android:src="@drawable/ic_baseline_delete_24" />

        <ImageButton
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button_move_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="manageMoveTo"
            android:contentDescription="@string/move_to"
            android:src="@drawable/ic_baseline_folder_24" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>